src/test/deca/context/invalid/declaVariable-noType.context
declaVariable-noType.deca:11:
